Update project version to 0.1.0, adjust plugin compatibility for JDK 23+, and enhance GitHub Actions build matrix